custom vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
+/**
+* Halcyon.css
+* Visual studio code custom settings
+*/
+
+
 {
     "liveSassCompile.settings.generateMap": true,
     "liveSassCompile.settings.formats": [
